Fixed bug where fullscreen elements were invisible, but captured clicks.

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -545,8 +545,8 @@ span.galleryFolderSelectors::first-letter{
 
 .lightbox__fullscreen--image-container{
     position: relative;
-    width: 100vw;
-    height: 100vh;
+    width: 0px;
+    height: 0px;
     z-index: 20;
     opacity: 0;
     background-color: rgba(0, 0, 0, .6);
